# C-Web

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE  LICENCE.md  README.md  SECURITY.md  listFR.md
.github/: dependabot.yml
.github/workflows/: Dayly-repport(discord).yml  V2 trafic report.yml  V2 trafic report.yml.txt  V2_trafic_report.yml  blank.yml  blank.yml.txt  codeql.yml
docs/: CNAME  index.html  script.js  style.css
docs/documentation/: index.html  script.js  style.css
include/core/: error.h  packet.h
src/core/: error.c  packet.c
